[package]
name = "notify_send"
version = "0.0.5"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
description = "This has been renamed into notify-rust. Dev will go on there."
homepage = "https://github.com/hoodie/notify_send-rs"
repository = "https://github.com/hoodie/notify_send-rs"

license = "MIT/Apache-2.0"
keywords = []
readme = "README.md"

[dependencies]
dbus = "0.0.9"
